@@ -1,3 +1,9 @@
+2006-08-22  Daniel Wagner  <wagi@monom.org>
+
+	* configure.ac: Version bump to 1.3.0
+	* freebob_sync allows now to set the sync mode. It does not
+	check yet if it really could set the mode.
+
 2006-07-17  Daniel Wagner  <wagi@monom.org>
 
 	* configure.ac: Version bump to 1.2.0
